Fixed width on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -698,6 +698,7 @@ No media query since this is the default in Bootstrap because it is "mobile firs
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
 @media (min-width: 768px) {  
     .dreamHomeTitle, .dreamHomeTitle1{font-size: 3.8rem;}
+    header{ background-size: auto 103vw; min-height: 790px;}
 }
  
 
